fix background not showing up

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,6 @@ h2{
 }
 
 body{
-	background-image: url('images/Cabin2.JPG');
+	background-image: url('images/Cabin2.jpg');
 	background-size: cover;
 }
